src/components/Footer/Footer.css
.footer-container {
  padding: 10px 10%;
  margin: 10px auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footer-divider{
    border: 1px solid var(--site-blue);
    width: 95%;
    margin: 10% auto 0 ;
}
.footer-divider2{
    border: 1px solid var(--site-blue);
    width: 95%;
    margin: 0 auto 1% ;
}

.company-details h1{
    text-align: center;
    color:var(--site-blue);
}

.company-details h2{
    text-align: center;
    color:var(--site-green);
}

.company-details img{
    width: 120px;
    height: 120px;
    margin: auto;
}

.navigators ul, .social-links ul{
    display: flex;
    gap: 40px;
    padding: 30px 0;
}
.navigators ul li, .social-links ul li{
    list-style: none;
}
.navigators ul li a, .social-links ul li a{
    text-decoration: none;
    color: var(--text-normal);
    &:hover{
        scale: 1.01;
    }
}

.copyright-text{
    color: #888888;
    text-align: center;
}

